--- a/dag-1/index.html
+++ b/dag-1/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Funksjonell JS ~ Dag 1</title>
-    <link rel="stylesheet" href="remark-styling.css"/>
+    <link rel="stylesheet" href="../remark-styling.css"/>
   </head>
   <body>
     <textarea id="source">
@@ -92,7 +92,7 @@ forslag til oppgave
 
 
     </textarea>
-    <script src="remark.min.js" type="text/javascript"></script>
+    <script src="../remark.min.js" type="text/javascript"></script>
   <!--<script src="http://gnab.github.com/remark/downloads/remark-0.5.5.min.js" type="text/javascript"></script>-->
     <script type="text/javascript">
       var slideshow = remark.create({
